Fix scrollbar appearance

--- a/labeling-ui/Styles/_page-layout.scss
+++ b/labeling-ui/Styles/_page-layout.scss
@@ -1,5 +1,5 @@
 .page-content {
   flex-grow: 21;
   margin: auto $vertical-block-size;
-  overflow: scroll;
+  overflow: auto;
 }
